logs/dag_id=Weather_DAG/run_id=scheduled__2024-02-08T130300+0000/task_id=create_db_schem/attempt=1.log
[2024-02-08T13:16:40.042+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG.create_db_schem scheduled__2024-02-08T13:03:00+00:00 [queued]>
[2024-02-08T13:16:40.088+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG.create_db_schem scheduled__2024-02-08T13:03:00+00:00 [queued]>
[2024-02-08T13:16:40.090+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 2
[2024-02-08T13:16:40.186+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): create_db_schem> on 2024-02-08 13:03:00+00:00
[2024-02-08T13:16:40.220+0000] {standard_task_runner.py:60} INFO - Started process 4100 to run task
[2024-02-08T13:16:40.234+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG', 'create_db_schem', 'scheduled__2024-02-08T13:03:00+00:00', '--job-id', '498', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmpry2bmkbz']
[2024-02-08T13:16:40.248+0000] {standard_task_runner.py:88} INFO - Job 498: Subtask create_db_schem
[2024-02-08T13:16:40.447+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG.create_db_schem scheduled__2024-02-08T13:03:00+00:00 [running]> on host 06573eafe810
[2024-02-08T13:16:40.715+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG' AIRFLOW_CTX_TASK_ID='create_db_schem' AIRFLOW_CTX_EXECUTION_DATE='2024-02-08T13:03:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-08T13:03:00+00:00'
[2024-02-08T13:16:40.725+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS dag_runs(
            id serial PRIMARY KEY,
            city varchar(),
            dt date,
            houur smallint(),
            temperature_c float(),
            pressure_mm float(),
            is_rainy boolean
            )
[2024-02-08T13:16:40.748+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-08T13:16:40.786+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-08T13:16:40.863+0000] {sql.py:450} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS dag_runs(
            id serial PRIMARY KEY,
            city varchar(),
            dt date,
            houur smallint(),
            temperature_c float(),
            pressure_mm float(),
            is_rainy boolean
            ), parameters: None
[2024-02-08T13:16:40.886+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4:             city varchar(),
                                 ^

[2024-02-08T13:16:40.940+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Weather_DAG, task_id=create_db_schem, execution_date=20240208T130300, start_date=20240208T131640, end_date=20240208T131640
[2024-02-08T13:16:41.043+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 498 for task create_db_schem (syntax error at or near ")"
LINE 4:             city varchar(),
                                 ^
; 4100)
[2024-02-08T13:16:41.118+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-08T13:16:41.148+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
